--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>لوحة تحكم Admin</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
@@ -18,7 +18,8 @@
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    padding: 30px 10px;
     color: #f0f0f0;
   }
 
@@ -27,8 +28,8 @@
     border-radius: 16px;
     box-shadow: 0 18px 60px rgba(0,0,0,0.25);
     padding: 35px 45px;
-    max-width: 900px;
-    width: 96%;
+    max-width: 1000px;
+    width: 100%;
     color: #222;
   }
 
@@ -82,7 +83,7 @@
     font-size: 16px;
   }
 
-  /* جدول أنيق */
+  /* جدول أنيق ومتجاوب */
   table {
     width: 100%;
     border-collapse: separate;
@@ -90,16 +91,20 @@
     font-size: 16px;
     font-weight: 600;
     color: #222;
+    table-layout: fixed;
   }
 
   thead th {
     background: #1976d2;
     color: white;
-    padding: 16px 18px;
+    padding: 16px 10px;
     text-align: center;
     font-weight: 700;
     border-radius: 12px 12px 0 0;
     letter-spacing: 0.6px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   tbody tr {
@@ -115,11 +120,14 @@
   }
 
   tbody td {
-    padding: 14px 18px;
+    padding: 14px 10px;
     text-align: center;
     vertical-align: middle;
     border-radius: 0 0 14px 14px;
     word-break: break-word;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   a.img-link {
@@ -167,6 +175,44 @@
   #logoutBtn:hover {
     background-color: #9a0007;
   }
+
+  /* تجاوب الجدول مع الموبايل */
+  @media (max-width: 900px) {
+    table, thead, tbody, th, td, tr {
+      display: block;
+    }
+    thead tr {
+      display: none;
+    }
+    tbody tr {
+      margin-bottom: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+      border-radius: 16px;
+      background: #e3f2fd;
+      padding: 20px 15px;
+    }
+    tbody td {
+      text-align: right;
+      padding-left: 50%;
+      position: relative;
+      white-space: normal;
+      overflow: visible;
+    }
+    tbody td::before {
+      position: absolute;
+      top: 14px;
+      right: 15px;
+      width: 45%;
+      white-space: nowrap;
+      font-weight: 700;
+      color: #0d47a1;
+      content: attr(data-label);
+      text-align: left;
+    }
+    .btn-whatsapp {
+      margin-top: 10px;
+    }
+  }
 </style>
 </head>
 <body>
@@ -188,6 +234,18 @@
 <script>
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyEWigtNobp361E1gFlrp64jxU9AnZHuYEfpJ4vbbtGXndea1GxEKchrHGfBUbzRBvQug/exec'; // عدل هنا برابطك
   const whatsappNumber = '201093139047';
+
+  const displayedFields = [
+    'name',
+    'phone',
+    'المحافظة',
+    'الهاتف',
+    'العنوان',
+    'كود التبع',
+    'حاله الطلب',
+    'نوع الطلب',
+    'نو الطلب'  // هذا العمود رقم 12 (اسم الحقل حسب جوجل شيت)
+  ];
 
   function login() {
     const user = document.getElementById('username').value.trim();
@@ -233,37 +291,28 @@
     let html = `<table>
       <thead><tr>`;
 
-    const headers = Object.keys(data[0]);
-    headers.push('واتساب');
-
-    headers.forEach(h => {
-      html += `<th>${h}</th>`;
+    // رؤوس الأعمدة حسب الحقول المطلوبة + واتساب
+    displayedFields.forEach(field => {
+      html += `<th>${field}</th>`;
     });
-
-    html += `</tr></thead><tbody>`;
+    html += `<th>واتساب</th></tr></thead><tbody>`;
 
     data.forEach(row => {
       html += `<tr>`;
-      headers.forEach(h => {
-        if(h === 'واتساب') {
-          html += `<td>
-            <button class="btn-whatsapp" onclick="sendWhatsapp('${row['كود التبع']}')" title="أرسل عبر واتساب">
-              <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-                <path d="M20.52 3.48A11.867 11.867 0 0 0 12 0C5.37 0 .02 5.34 0 12c0 2.11.56 4.08 1.55 5.79L0 24l6.37-1.65A11.9 11.9 0 0 0 12 24c6.63 0 12-5.37 12-12a11.88 11.88 0 0 0-3.48-8.52zM12 21.5c-1.86 0-3.61-.54-5.07-1.46l-.36-.22-3.78.97.96-3.69-.24-.38A9.431 9.431 0 0 1 2.5 12C2.5 6.8 6.8 2.5 12 2.5S21.5 6.8 21.5 12 17.2 21.5 12 21.5zm1.71-6.11c-.07-.11-.27-.17-.56-.29s-1.1-.51-1.28-.57-.3-.1-.43.11-.49.57-.6.68-.22.16-.41.06a4.25 4.25 0 0 1-1.25-.73-4.77 4.77 0 0 1-1.78-2.2c-.18-.38 0-.58.13-.76.06-.07.15-.17.22-.26a.57.57 0 0 0 .08-.1.33.33 0 0 0 0-.3c0-.1-.43-1.04-.6-1.42s-.3-.33-.43-.34h-.37a.77.77 0 0 0-.56.27 2.37 2.37 0 0 0-.7 1.7 3.95 3.95 0 0 0 1.44 3.08 6.79 6.79 0 0 0 3.15 2.08c.44.18.76.15 1.05.09a2.36 2.36 0 0 0 1.07-.66 3.1 3.1 0 0 0 .9-1.05c.06-.11.03-.2-.05-.31z"/>
-              </svg>
-            </button>
-          </td>`;
-        } else if(h === 'صورة التحويل') {
-          const url = row[h];
-          if(url && url.startsWith('http')) {
-            html += `<td><a href="${url}" target="_blank" rel="noopener" class="img-link" title="عرض صورة التحويل">عرض</a></td>`;
-          } else {
-            html += `<td>لا يوجد</td>`;
-          }
-        } else {
-          html += `<td>${row[h] ?? ''}</td>`;
-        }
+      displayedFields.forEach(field => {
+        let val = row[field] ?? '';
+        html += `<td data-label="${field}">${val}</td>`;
       });
+
+      // زر واتساب يرسل رسالة بالتفاصيل المطلوبة
+      html += `<td data-label="واتساب">
+        <button class="btn-whatsapp" onclick="sendWhatsappMessage(${JSON.stringify(row)})" title="أرسل عبر واتساب">
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+            <path d="M20.52 3.48A11.867 11.867 0 0 0 12 0C5.37 0 .02 5.34 0 12c0 2.11.56 4.08 1.55 5.79L0 24l6.37-1.65A11.9 11.9 0 0 0 12 24c6.63 0 12-5.37 12-12a11.88 11.88 0 0 0-3.48-8.52zM12 21.5c-1.86 0-3.61-.54-5.07-1.46l-.36-.22-3.78.97.96-3.69-.24-.38A9.431 9.431 0 0 1 2.5 12C2.5 6.8 6.8 2.5 12 2.5S21.5 6.8 21.5 12 17.2 21.5 12 21.5zm1.71-6.11c-.07-.11-.27-.17-.56-.29s-1.1-.51-1.28-.57-.3-.1-.43.11-.49.57-.6.68-.22.16-.41.06a4.25 4.25 0 0 1-1.25-.73-4.77 4.77 0 0 1-1.78-2.2c-.18-.38 0-.58.13-.76.06-.07.15-.17.22-.26a.57.57 0 0 0 .08-.1.33.33 0 0 0 0-.3c0-.1-.43-1.04-.6-1.42s-.3-.33-.43-.34h-.37a.77.77 0 0 0-.56.27 2.37 2.37 0 0 0-.7 1.7 3.95 3.95 0 0 0 1.44 3.08 6.79 6.79 0 0 0 3.15 2.08c.44.18.76.15 1.05.09a2.36 2.36 0 0 0 1.07-.66 3.1 3.1 0 0 0 .9-1.05c.06-.11.03-.2-.05-.31z"/>
+          </svg>
+        </button>
+      </td>`;
+
       html += `</tr>`;
     });
 
@@ -272,15 +321,32 @@
     document.getElementById('tableContainer').innerHTML = html;
   }
 
-  function sendWhatsapp(code) {
-    const text = encodeURIComponent(`يوجد طلب جديد برمز التتبع: ${code}`);
+  function sendWhatsappMessage(row) {
+    // رسالة واتساب تشمل الحقول المطلوبة:
+    const msg = `
+طلب جديد:
+الاسم: ${row['name'] || ''}
+الهاتف: ${row['phone'] || ''}
+المحافظة: ${row['المحافظة'] || ''}
+الهاتف الثاني: ${row['الهاتف'] || ''}
+العنوان: ${row['العنوان'] || ''}
+كود التبع: ${row['كود التبع'] || ''}
+حالة الطلب: ${row['حاله الطلب'] || ''}
+نوع الطلب: ${row['نوع الطلب'] || ''}
+رقم الطلب: ${row['نو الطلب'] || ''}
+`.trim();
+
+    const encodedMsg = encodeURIComponent(msg);
+    const whatsappNumber = '201093139047';
+
+    // فتح نافذة صغيرة popup
     const width = 600;
     const height = 700;
     const left = (screen.width / 2) - (width / 2);
     const top = (screen.height / 2) - (height / 2);
 
     window.open(
-      `https://wa.me/${whatsappNumber}?text=${text}`,
+      `https://wa.me/${whatsappNumber}?text=${encodedMsg}`,
       'whatsappPopup',
       `width=${width},height=${height},top=${top},left=${left},resizable=yes,scrollbars=yes,status=yes`
     );
